Fix "jumping" of aside throe loading

--- a/src/containers/Aside/index.css
+++ b/src/containers/Aside/index.css
@@ -16,8 +16,8 @@
 
 .list {
   position: sticky;
-  /* 56px - height of header */
-  top: 56px;
+  /* 54px - height of header */
+  top: 54px;
   z-index: 1;
 
   box-sizing: border-box;
